database config for slicehost

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,8 @@ test:
   # timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  timeout: 5000
+  adapter: mysql
+  username: root
+  password: whoisthemaster
+  database: splurgel_production
+  host:     localhost
